@@ -1,6 +1,6 @@
 @import 'node_modules/@wordpress/components/src/tooltip/style.scss';
 
-$space-header-item: 15px;
+$space-header-item: 25px;
 
 .transactions-list {
 	.date-time {
@@ -9,7 +9,7 @@ $space-header-item: 15px;
 
 	.converted-amount {
 		display: flex; // Necessary for conversion tooltip to show.
-		justify-content: flex-end;
+		justify-content: center;
 
 		.conversion-indicator {
 			margin-right: 6px;
