@@ -105,6 +105,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Fix hover dialog for close button on modals, unify styling and layout of modal buttons.
 * Update - Use Site Language when rendering Stripe elements.
 * Update - Use blog ID for authenticating most of the requests.
+* Fix: Misaligned columns on Deposits page.
 
 = 2.4.0 - 2021-05-12 =
 * Update - Improve the Connect Account page.
